--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -38,10 +38,22 @@ body {
 }
 
 body.moving iframe {
-	pointer-events: none; /* for mouse capturing to work properly when moving splitters */
+	pointer-events: none;
+	/* for mouse capturing to work properly when moving splitters */
 }
 
-.editor, .shadow, .log {
+a.button {
+	-webkit-appearance: button;
+	-moz-appearance: button;
+	appearance: button;
+
+	text-decoration: none;
+	color: initial;
+}
+
+.editor,
+.shadow,
+.log {
 	font-weight: normal;
 }
 
@@ -175,7 +187,7 @@ button cmd {
 .editor-wrapper {
 	left: 0;
 	width: 100%;
-    overflow: auto;
+	overflow: auto;
 }
 
 .output-wrapper {
@@ -183,12 +195,12 @@ button cmd {
 	overflow: hidden;
 }
 
-body.withsidebar .editor-wrapper,
-body.withsidebar .output-wrapper {
+.withsidebar .editor-wrapper,
+.withsidebar .output-wrapper {
 	width: 50%;
 }
 
-body.withsidebar .editor-wrapper {
+.withsidebar .editor-wrapper {
 	border-right: 1px solid var(--border-color);
 }
 
@@ -341,7 +353,8 @@ kbd {
 
 .help-browser {
 	position: absolute;
-	bottom: -1px; /* to hide odd 1px div#lowframe on golang.org */
+	bottom: -1px;
+	/* to hide odd 1px div#lowframe on golang.org */
 	left: 0;
 	width: 100%;
 	height: 100%;
@@ -386,34 +399,29 @@ kbd {
 .kwd {
 	color: var(--highlight-kwd-color);
 }
+
 .pln {
 	color: var(--highlight-pln-color);
 }
+
 .str {
 	color: var(--highlight-str-color);
 }
+
 .pun {
 	color: var(--highlight-pun-color);
 }
+
 .dec {
 	color: var(--highlight-dec-color);
 }
+
 .typ {
 	color: var(--highlight-typ-color);
 }
+
 .com {
 	color: var(--highlight-com-color);
-}
-
-/* Classic play.golang.org theme */
-
-body.classic {
-	--main-bgcolor: #ffd;
-	--header-bgcolor: hsl(209, 51%, 92%);
-
-	--header-button-bgcolor: #375eab;
-	--header-button-border-color: #375eab;
-	--header-button-color: #fff;
 }
 
 /* Settings dialog */
@@ -483,125 +491,6 @@ body.classic {
 	cursor: row-resize;
 }
 
-/* Canvas */
-
-.canvas-lightbox {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	box-sizing: border-box;
-	padding: 25px;
-	z-index: 2;
-}
-
-.canvas-wrapper {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background: rgba(255, 255, 255, 0.8);
-	border-radius: 5px;
-	overflow: hidden;
-}
-
-canvas {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-}
-
-.gopher {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	box-sizing: border-box;
-	width: 50px;
-	height: 50px;
-	margin-left: -25px;
-	margin-top: -25px;
-	/* background-image: url(gopher_walk.svg); */
-	background-repeat: no-repeat;
-	background-size: 250px; /* 5:1 ratio */
-	background-position: -100px 0px;
-}
-
-.say-bubble {
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: #fe9;
-	color: #000;
-	z-index: 2;
-	padding: 0.2em 0.5em;
-	border-radius: 1em;
-	box-shadow: 0 0 2px #000, 0 0 2px #000;
-	opacity: 0; /* initial value */
-}
-
-.say-bubble.animate {
-	-webkit-animation: say-bubble 3s linear;
-	-moz-animation: say-bubble 3s linear;
-	animation: say-bubble 3s linear;
-}
-@-moz-keyframes say-bubble {
-	0% {
-		-moz-transform: scale(0.8);
-	}
-
-	10% {
-		opacity: 1;
-		-moz-transform: scale(1);
-	}
-
-	90% {
-		opacity: 1;
-		-moz-transform: scale(1);
-	}
-
-	100% {
-		-moz-transform: scale(1.2);
-	}
-}
-@-webkit-keyframes say-bubble {
-	0% {
-		-webkit-transform: scale(0.8);
-	}
-
-	10% {
-		opacity: 1;
-		-webkit-transform: scale(1);
-	}
-
-	90% {
-		opacity: 1;
-		-webkit-transform: scale(1);
-	}
-
-	100% {
-		-webkit-transform: scale(1.2) translateY(-20px);
-	}
-}
-@keyframes say-bubble {
-	0% {
-		transform: scale(0.8);
-	}
-
-	10% {
-		opacity: 1;
-		transform: scale(1) translateY(-50px);
-	}
-
-	90% {
-		opacity: 1;
-		transform: scale(1) translateY(-50px);
-	}
-
-	100% {
-		transform: scale(1.2) translateY(-100px);
-	}
-}
-
 /* we only need this wrapper to set z-index and fix the issue
 of bleeding corners (statusbar corners will show up even if its
 parent has a border radius) */
@@ -631,18 +520,4 @@ parent has a border radius) */
 	padding: 0.1em 0.3em;
 	border-radius: 3px;
 	color: rgba(255, 255, 255, 0.7);
-}
-
-body.drawingmode {
-	user-select: none;
-}
-
-body.drawingmode .header,
-body.drawingmode .content-wrapper,
-body.drawingmode .log-wrapper {
-	-webkit-filter: blur(5px);
-	-moz-filter: blur(5px);
-	-o-filter: blur(5px);
-	-ms-filter: blur(5px);
-	filter: blur(5px);
 }
